<resources>
    <string name="app_name">Sungka</string>

    <string name="action_settings">Settings</string>
    <string name="player_1_t1">test</string>
    <string name="player_1"> Player 1 </string>
    <string name="player_2"> Player 2 </string>
    <string name="title">Sunka</string>
    <string name="highscoretitle">Leaderboard</string>
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="highscores">Leaderboard</string>
    <string name="ondevice">2 Player</string>
    <string name="serverStatus">Server Status</string>
    <string name="iP">Server IP:</string>
    <string name="ip_hint">15:12:14</string>
    <string name="connect_phone_button">Connect Phone</string>
    <string name="title_activity_name_2_player">Name_2Player</string>

    <string name="firstScore">First Name</string>
    <string name="firstHighScore">Total Score: 00</string>
    <string name="first_wins">Wins: 0/0</string>

    <string name="secondScore">Second Name</string>
    <string name="secondHighScore">Total Score: 00</string>
    <string name="second_wins">Wins: 0/0</string>

    <string name="thirdScore">Third Name</string>
    <string name="thirdHighScore">Total Score: 00</string>
    <string name="third_wins">Wins: 0/0</string>
    <string name="title_activity_instructions">How To Play</string>

    <string name="hello_world">Hello world!</string>
    <string name="instruction1"> 1.Choose one of your seven trays, and it will redistribute your chells one per tray in an anti-clockwise fashion.</string>
    <string name="instruction2"> 2.If you end up with the last distributed shell in your store, you get a second turn. If you have 0 shells in your trays, you skip a turn.</string>
    <string name="instruction3"> 3.The game ends when all the shells are in the stores, the winner is the player who has the most shells.</string>


</resources>


